Update experience and portfolio

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Ashish Bachavala</h1>
-								<p>I am a senior <b>Computer Science</b> student at the <b>University of Maryland</b>.<br />
+								<p>I am a <b>Software Engineer</b> at <b>Microsoft</b>.<br />
 								I have experience in <b>full stack</b> development and work with a <b>versatile set of languages</b>.<br />
-								I am looking for opportunities to build on my <b>software development</b> skills.</p>
+								I am looking for opportunities and interesting projects in software development.</p>
 							</div>
 						</div>
 						<nav>
@@ -66,6 +66,16 @@
 								<hr>
 
 								<h2 class="major">Work Experience</h2>
+
+								<h3 style="margin-bottom: 0.5rem;">Microsoft - Redmond, WA</h3>
+								<h4 style="margin-bottom: 0.5rem;">Software Engineer</h4>
+								<h5 style="margin-bottom: 0.5rem;">September, 2021 - Present</h5>
+								<ul>
+									<li>Worked on a data processing engine that credits and calculates earnings for Microsoft sellers based on attainment and quotas</li>
+									<li>Used Azure Cloud applications to host and run data processing pipelines and web services</li>
+									<li>Drove the improvement of engineering tools and practices in Azure DevOps</li>
+								</ul>
+								<p></p>
 
 								<h3 style="margin-bottom: 0.5rem;">Microsoft - Remote</h3>
 								<h4 style="margin-bottom: 0.5rem;">Software Engineer Intern</h4>
@@ -110,17 +120,24 @@
 								<h2 class="major">Portfolio</h2>
 								<!-- <span class="image main"><img src="images/portfolio.png" alt="" /></span> -->
 
+								<h3 style="margin-bottom: 0.5rem;">Spotify Viz - JavaScript, HTML, CSS</h3>
+								<!-- <span class="image main" style="margin: 0.2rem 0;"><img src="images/agenda.png" alt="" /></span> -->
+								<p>Created a music visualizer that reacts to the music you are currently playing on Spotify<br />
+								<a href="https://github.com/ashish0810/spotify-viz">Click here to check it out</a></p>
+
+								<hr>
+
 								<h3 style="margin-bottom: 0.5rem;">Agenda Application - JavaScript, PHP, MySQL, HTML, CSS</h3>
 								<!-- <span class="image main" style="margin: 0.2rem 0;"><img src="images/agenda.png" alt="" /></span> -->
 								<p>Designed and built a productivity application which allows users to create a personal account then save and track daily tasks<br />
-								<a href="https://ashishbach.com/agenda">Click here to check it out</a></p>
+								<!-- <a href="https://ashishbach.com/agenda">Click here to check it out</a></p> -->
 
 								<hr>
 
 								<h3 style="margin-bottom: 0.5rem;">Ashish Chat - JavaScript, PHP, HTML, CSS</h3>
 								<!-- <span class="image main" style="margin: 0.2rem 0;"><img src="images/chat.png" alt="" /></span> -->
 								<p>Created a simple online chat program which allows users to send text based messages between each other<br />
-								<a href="https://ashishbach.com/chat">Click here to check it out</a></p>
+								<!-- <a href="https://ashishbach.com/chat">Click here to check it out</a></p> -->
 
 								<hr>
 
@@ -185,7 +202,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Ashish Bachavala. Contact: <a href="mailto:me@ashishbach.com">me@ashishbach.com</a>. View my <a href="Ashish-Bachavala-Resume.pdf">resume here</a>.</p>
+						<p class="copyright">&copy; Ashish Bachavala. Contact: <a href="mailto:ashish0810@yahoo.com">ashish0810@yahoo.com</a>. View my <a href="Ashish-Bachavala-Resume.pdf">resume here</a>.</p>
 					</footer>
 
 			</div>
